fixed alignment of age verification
put a : for email input, change sizes for alignment, deleted the input:focus

--- a/css/screen.css
+++ b/css/screen.css
@@ -288,34 +288,28 @@ input[type="submit"]:hover {
    background: #555;
 }
 
-input:focus {
-   background-color: #c0c0c0;
-}
-
 /* checkbox */
 input[type="checkbox"] {
    width: auto;
    margin-right: 10px;
+   cursor: pointer;
 }
 
-.input-age-verification { 
+#input-age-verification { 
    display: flex;
    align-items: center;
-   gap: 10px;
+   gap: 8px;
    flex-wrap: nowrap;
 }
 
 /* layout for desktop */
 @media (min-width: 768px) {
    form {
-            max-width: 600px;
+            max-width: 650px;
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
 }
-   label {
-      width: 50%;
-   }
 
    input {
       width: 100%; 
